--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -24,7 +24,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="/css/style.css" />
-		<title>Scheduler</title>
+		<title>Catálogo</title>
 	</head>
 	<body>
 		<header>
